--- a/Manual/Cooking.html
+++ b/Manual/Cooking.html
@@ -32,7 +32,7 @@
                         <p> To solve this module, you must input the correct settings into the oven.</p>
                         <p> The settings you must input depend on the person you’re cooking for, the meal you are making.</p>
                         <p> The temperature should be submitted on the left screen, and the time on the right screen.</p>
-                        <h3> 1. Determening meal and settings</h3>
+                        <h3> 1. Determining meal and settings</h3>
                         <ul>
                         <li> To figure out the meal you are creating, you must do: number of battery holders - number of indicators + (number of batteries x number of ports) - port plates. Keep adding or subtracting 5 until in the range 1-5.
                         <li> To figure out the oven setting you are using, you must do: number of lit indicators - number of unlit indicators + number of letters in the serial number. Keep adding or subtracting 6 until in the range 1-6.
@@ -60,7 +60,7 @@
 				       </tbody>
                        </table>
 
-                        <p class="footnote">*Y is concidered a vowel.</p>
+                        <p class="footnote">*Y is considered a vowel.</p>
 
                     </div>
 
@@ -77,9 +77,9 @@
                         <ul>
                         <li> If there is a lit FRK or a serial port, cook for Harry.
                         <li> Otherwise, if there is an empty port plate or a lit FRQ, cook for James.
-                        <li> Otherwise, if there is more digits than letters in the serial number or there is an unlit SND, cook for Tom.
+                        <li> Otherwise, if there are more digits than letters in the serial number or there is an unlit SND, cook for Tom.
                         <li> Otherwise, if there is a HDMI, composite video or usb port, cook for Erik.
-                        <li> Otherwise, if there is a Lit or unlit BOB indicator, cook for Bob.
+                        <li> Otherwise, if there is a lit or unlit BOB indicator, cook for Bob.
                         <li> Otherwise, cook for Markus.  
                             </ul>
 
@@ -147,7 +147,7 @@
 				</tbody>
 			</table>
 
-                    <p> Once you have entered all of the correct setting, you can press the Cook button.</p>
+                    <p> Once you have entered all of the correct settings, you can press the Cook button.</p>
 
                     
                     </div>
