-Fixed typos in the manual.

--- a/Manual/Cooking.html
+++ b/Manual/Cooking.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="page-content">
 
-                        <h3> 2. Determening person to cook for</h3>
+                        <h3> 2. Determining person to cook for</h3>
                         <ul>
                         <li> If there is a lit FRK or a serial port, cook for Harry.
                         <li> Otherwise, if there is an empty port plate or a lit FRQ, cook for James.
@@ -85,7 +85,7 @@
 
 
 
-                        <p> You must then decide the time you have to wait in the table below, using the person and the meal.</p>
+                        <p> Determine the time to wait in the table below, using the person and the meal.</p>
 
                         <table class="table3">
 				<tbody>
@@ -147,7 +147,7 @@
 				</tbody>
 			</table>
 
-                    <p> Once you have entered all of the correct settings, you can press the Cook button.</p>
+                    <p> Once you have entered all of the correct settings, press the Cook button.</p>
 
                     
                     </div>
