--- a/Manual/Cooking.html
+++ b/Manual/Cooking.html
@@ -51,12 +51,12 @@
                         <p> Use the number you have calculated for the oven setting in the table below.</p>
                         <table class="table2">
                         <tbody>
-					<tr><td>1</td><td>Bottom Element Heat</td></tr>
-					<tr><td>2</td><td>Bottom Element Heating with Grill</td></tr>
-					<tr><td>3</td><td>Conventional Heating</td></tr>
-					<tr><td>4</td><td>Fan Oven</td></tr>
-					<tr><td>5</td><td>Grill</td></tr>
-                    <tr><td>6</td><td>Fan with Grill</td></tr>
+					<tr><td>1</td><td><img src="img/Element bottom heat.png" height = "30">Bottom Element Heat</td></tr>
+					<tr><td>2</td><td><img src="img/Bottom Element Heating with Grill.png" height = "30">Bottom Element Heating with Grill</td></tr>
+					<tr><td>3</td><td><img src="img/Upper and lower heating.png" height = "30">Conventional Heating</td></tr>
+					<tr><td>4</td><td><img src="img/Fan oven.png" height = "30">Fan Oven</td></tr>
+					<tr><td>5</td><td><img src="img/Part grill.png" height = "30">Grill</td></tr>
+                    <tr><td>6</td><td><img src="img/Grill and fan.png" height = "30">Fan with Grill</td></tr>
 				       </tbody>
                        </table>
 
