--- a/Manual/Cooking.html
+++ b/Manual/Cooking.html
@@ -29,13 +29,13 @@
                         <h2>On the Subject of Cooking</h2>
                         <p class="flavour-text">The cake is a lie...</p>
 
-                        <p> To solve this module, you must input the correct settings into the oven.</p>
-                        <p> The settings you must input depend on the person you’re cooking for, the meal you are making.</p>
+                        <p> To solve this module, input the correct settings into the oven.</p>
+                        <p> The settings to input depend on the person you’re cooking for and the meal you are making.</p>
                         <p> The temperature should be submitted on the left screen, and the time on the right screen.</p>
                         <h3> 1. Determining meal and settings</h3>
                         <ul>
-                        <li> To figure out the meal you are creating, you must do: number of battery holders - number of indicators + (number of batteries x number of ports) - port plates. Keep adding or subtracting 5 until in the range 1-5.
-                        <li> To figure out the oven setting you are using, you must do: number of lit indicators - number of unlit indicators + number of letters in the serial number. Keep adding or subtracting 6 until in the range 1-6.
+                        <li> To determine the meal you are creating, calculate: number of battery holders - number of indicators + (number of batteries x number of ports) - port plates. Keep adding or subtracting 5 until in the range 1-5.
+                        <li> To determine the oven setting you are using, calculate: number of lit indicators - number of unlit indicators + number of letters in the serial number. Keep adding or subtracting 6 until in the range 1-6.
                         <li> If there is a vowel* in the serial number or there is a PS/2 port, the light must be turned on.
                             </ul>
                         <p> Use the number you have calculated for the meal in the table below.</p>
@@ -78,7 +78,7 @@
                         <li> If there is a lit FRK or a serial port, cook for Harry.
                         <li> Otherwise, if there is an empty port plate or a lit FRQ, cook for James.
                         <li> Otherwise, if there are more digits than letters in the serial number or there is an unlit SND, cook for Tom.
-                        <li> Otherwise, if there is a HDMI, composite video or usb port, cook for Erik.
+                        <li> Otherwise, if there is a HDMI, Composite Video or USB port, cook for Erik.
                         <li> Otherwise, if there is a lit or unlit BOB indicator, cook for Bob.
                         <li> Otherwise, cook for Markus.  
                             </ul>
