- Small change in the manual.

--- a/Manual/Cooking.html
+++ b/Manual/Cooking.html
@@ -52,7 +52,7 @@
                         <table class="table2">
                         <tbody>
 					<tr><td>1</td><td><img src="img/Element bottom heat.png" height = "30">Bottom Element Heat</td></tr>
-					<tr><td>2</td><td><img src="img/Bottom Element Heating with Grill.png" height = "30">Bottom Element Heating with Grill</td></tr>
+					<tr><td>2</td><td><img src="img/Bottom Element Heating with Grill.png" height = "30">Bottom Element Heat with Grill</td></tr>
 					<tr><td>3</td><td><img src="img/Upper and lower heating.png" height = "30">Conventional Heating</td></tr>
 					<tr><td>4</td><td><img src="img/Fan oven.png" height = "30">Fan Oven</td></tr>
 					<tr><td>5</td><td><img src="img/Part grill.png" height = "30">Grill</td></tr>
